ingress-resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: frontend-ingress
  namespace: default
spec:
  rules:
    - host: frontend.example.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
  tls:
    - hosts:
        - fusion.overfit.study
      secretName: frontend-cert
